Move nsc-comms-service to ZGC at 3072m in both size tiers
The 32 GB profile is expected to become the default, so the collector for
nsc-comms-service is chosen once and used at both sizes rather than
diverging between them. Pause sensitivity is a property of the service,
not of the host's RAM, and a signalling service benefits from ZGC's
sub-millisecond pauses at either size.

ZGC needs a larger heap than G1 for the same live set because it collects
concurrently while the service keeps allocating. Sized from the observed
OOM data (peak non-heap 659 MiB): 1843 MiB heap x 1.15 for ZGC structures
plus 690 MiB of capped native memory needs 2810 MiB, so 3072m is the
smallest limit that fits with usable slack. 2048m cannot hold a ZGC comms
service, which is what caused the original kills.

The rc block runs JDK 25, where generational ZGC is the default and
-XX:+ZGenerational has been removed; release-4.5.3 runs JDK 21, where the
flag is required. The two blocks therefore carry different GC_OPTIONS on
purpose.

The 32 GB override stays at 4096m. Native caps, the GC log and
MaxRAMPercentage=60 are unchanged.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>